// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect baseVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      广东省
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      江苏省
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <!---->
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect collapsedVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-collapsed"
>
  <div
    class="t-popup__reference t-select-input t-select-input--multiple t-select-input--empty demo-space"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="guangdong"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      广东省
                      
                    </span>
                  </label>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="jiangsu"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      江苏省
                      
                    </span>
                  </label>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap t-tag-input"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
            style="max-width: 300px;"
          >
            <!---->
            <span
              class="t-tag--text"
              style="max-width: 300px;"
            >
              
              <!---->
              
            </span>
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
  <div
    class="t-popup__reference t-select-input t-select-input--multiple t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="guangdong"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      广东省
                      
                    </span>
                  </label>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="jiangsu"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      江苏省
                      
                    </span>
                  </label>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap t-tag-input"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
            style="max-width: 300px;"
          >
            <!---->
            <span
              class="t-tag--text"
              style="max-width: 300px;"
            >
              
              <!---->
              
            </span>
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect filterableVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-filterable"
>
  <div
    class="operation"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="default"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           默认 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="function"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           自定义方法 
          
          
        </span>
      </label>
      
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      广东省
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      江苏省
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <!---->
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect lazyVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-lazy"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="1"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      1
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="2"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      2
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <!---->
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect multipleVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-multiple"
>
  <div
    class="t-popup__reference t-select-input t-select-input--multiple t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="guangdong"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      广东省
                      
                    </span>
                  </label>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="jiangsu"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      江苏省
                      
                    </span>
                  </label>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap t-tag-input"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
            style="max-width: 300px;"
          >
            <!---->
            <span
              class="t-tag--text"
              style="max-width: 300px;"
            >
              
              <!---->
              
            </span>
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect prefixVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-prefix"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="group1"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      开发一组
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="group2"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      开发二组
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <span
          class="t-input__prefix t-input__prefix-icon"
        >
          
          
          
          <svg
            class="t-icon t-icon-browse"
          >
            <use
              href="#t-icon-browse"
            />
          </svg>
          
          
          
        </span>
        <div
          class="t-input__prefix"
        >
          
          <!---->
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请输入"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect propsVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      广东省
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      江苏省
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <!---->
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect valuedisplayVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-valuedisplay"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      广东省
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      江苏省
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          
          
          
          () 
          
          
          
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
  <div
    class="t-popup__reference t-select-input t-select-input--multiple t-select-input--empty tree-select-multiple"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="guangdong"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      广东省
                      
                    </span>
                  </label>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="jiangsu"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      江苏省
                      
                    </span>
                  </label>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap t-tag-input"
    >
      <div
        class="t-input t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          
          
          
          
          
          
          
          
          
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`TreeSelect TreeSelect valuetypeVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-popup__reference t-select-input t-select-input--empty"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      广东省
                    </span>
                  </span>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <span
                    class="t-tree__label t-tree__label--strictly"
                  >
                    <span
                      style="position: relative;"
                    >
                      江苏省
                    </span>
                  </span>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <!---->
          <!---->
          
        </div>
        <input
          class="t-input__inner"
          placeholder="请选择"
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
  <div
    class="t-popup__reference t-select-input t-select-input--multiple t-select-input--empty tree-select-multiple"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup__content t-select__dropdown-inner t-select__dropdown narrow-scrollbar"
        >
          
          <div>
            <p
              class="t-select-loading-tips t-select__right-icon-polyfill"
              style="display: none;"
            >
              <div
                class="t-select__empty"
              >
                加载中
              </div>
            </p>
            <div
              class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition t-tree--block-node"
              modelvalue=""
              size="medium"
            >
              <transition-group-stub>
                
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="guangdong"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-is-checked t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="guangdong"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      广东省
                      
                    </span>
                  </label>
                  
                </div>
                <div
                  class="t-tree__item"
                  data-level="0"
                  data-value="jiangsu"
                  style="--level: 0;"
                >
                  
                  <span
                    class="t-tree__icon t-folder-icon t-tree__icon--default"
                    ignore="active"
                    trigger="expand"
                  >
                    <svg
                      class="t-icon t-icon-caret-right-small"
                      fill="none"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M6 5v6l4.5-3L6 5z"
                        fill="currentColor"
                        fill-opacity="0.9"
                      />
                    </svg>
                  </span>
                  <label
                    class="t-checkbox t-tree__label t-tree__label--strictly"
                    ignore="expand,active"
                  >
                    <input
                      class="t-checkbox__former"
                      name="jiangsu"
                      type="checkbox"
                    />
                    <span
                      class="t-checkbox__input"
                    />
                    <span
                      class="t-checkbox__label"
                    >
                      
                      江苏省
                      
                    </span>
                  </label>
                  
                </div>
                
              </transition-group-stub>
              <!---->
            </div>
          </div>
          
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-input__wrap t-tag-input"
    >
      <div
        class="t-input t-is-readonly t-input--prefix"
      >
        <!---->
        <div
          class="t-input__prefix"
        >
          
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
            style="max-width: 300px;"
          >
            <!---->
            <span
              class="t-tag--text"
              style="max-width: 300px;"
            >
              
              <!---->
              
            </span>
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          
        </div>
        <input
          class="t-input__inner"
          placeholder=""
          readonly=""
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;
